# CS-AI-bet

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
data/: latest.json
data/stages/: stage-1.json  stage-2.json  stage-3.json
data/system/: source-status.json
docs/: data-processing.md  modeling-upgrade-2026-06.md
docs/reviews/: 2026-06-05-majors-im-swiss-review.md
examples/: bp_intel.csv  cologne2026_stage1_opening_fixtures.csv  cologne2026_stage1_teams.csv  daily_update_config.json  final_standings_sample.csv  hltv_event_fixture.html  hltv_player_stats_fixture.html  hltv_rankings_fixture.html  hltv_results_fixture.html  major_participants_sample.csv  odds_feed.csv  pickem_backtest_suite_sample.json  player_stats.csv  raw_match_history.csv  sample_matches.csv  sample_teams.csv  top80_teams_sample.csv  upcoming_fixtures.csv  version_log.csv
scripts/: export_site_data.py  generate_ai_articles.py  render_pickem_checkpoint.py  update_site_data.py
site/: index.html  styles.css
site/data/: latest.json
site/src/: bracket.js  data.js  effects.js  main.js  pickem.js  render.js  renderPredict.js  swiss.js  swissSim.js  trace.js
site/tests/: bracket.test.mjs  pickem.test.mjs  predict.test.mjs  render.test.mjs  shell.test.mjs  swiss.test.mjs  trace.test.mjs
src/: data.js  effects.js  render.js  swiss.js
src/cs2pickem/: __init__.py  backtest.py  bp.py  calibration.py  cleaning.py  cli.py  data.py  dataset_store.py  enrichment.py  evaluation.py  export.py  features.py  fivee.py  maps.py  (+22 more)
tests/: render.test.mjs  swissSim.test.mjs  test_ai_articles.py  test_backtest.py  test_bp.py  test_calibration.py  test_core.py  test_dataset_store.py  test_enrichment.py  test_evaluation.py  test_examples.py  test_export.py  test_feature_selection.py  test_features.py  test_fivee.py  test_forecast.py  test_imbalance.py  test_maps.py  test_models.py  test_odds.py  test_pages_workflow.py  test_pickem.py  test_pickem_checkpoint_render.py  test_players.py  test_ratings.py  test_readiness.py  test_reliability.py  test_series.py  test_site_export.py  test_site_update.py  test_sources.py  test_splitting.py  test_staking.py  test_strategy.py  test_swiss.py  test_training_evaluation.py  test_tuning.py  test_visualization.py  test_workflow.py
(+130 files in other folders)
