[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cs2pickem"
version = "0.1.0"
description = "Offline CS2 Major Pick'em prediction pipeline with cleaning, features, ensemble models, Swiss simulation, and strategy output."
requires-python = ">=3.9"
readme = "README.md"
authors = [{ name = "Codex" }]

[project.optional-dependencies]
ml = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "xgboost>=2.0",
  "joblib>=1.3",
  "imbalanced-learn>=0.11",
  "tensorflow>=2.15",
]
scrape = [
  "requests>=2.31",
  "beautifulsoup4>=4.12",
]
viz = [
  "matplotlib>=3.7",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
cs2pickem = "cs2pickem.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
