[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cs2pickem"
version = "0.1.0"
description = "Offline CS2 Major Pick'em prediction pipeline with cleaning, features, ensemble models, Swiss simulation, and strategy output."
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Codex" }, { name = "BeforeUgone" }]
keywords = [
  "counter-strike",
  "cs2",
  "esports",
  "pickem",
  "machine-learning",
  "prediction",
  "monte-carlo",
  "elo",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
ml = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "xgboost>=2.0",
  "joblib>=1.3",
  "imbalanced-learn>=0.11",
  "tensorflow>=2.15",
]
scrape = [
  "requests>=2.31",
  "beautifulsoup4>=4.12",
]
viz = [
  "matplotlib>=3.7",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
cs2pickem = "cs2pickem.cli:main"

[project.urls]
Homepage = "https://github.com/beforeugone520/CS-AI-bet"
Repository = "https://github.com/beforeugone520/CS-AI-bet"
Issues = "https://github.com/beforeugone520/CS-AI-bet/issues"

[tool.setuptools.packages.find]
where = ["src"]
